@@ -1,0 +1,9 @@
+
+.setup-wrapper {
+    padding:2rem 5rem 2rem 5rem;
+    .setup {
+        margin-top: 2rem;
+        padding: 5rem;
+    }
+}
+
