@@ -5,7 +5,8 @@
 export let environment = {
   production: false,
   apiURL: 'http://localhost:55247/',
-  apiDomain: 'localhost:55247'
+  apiDomain: 'localhost:55247',
+  defaultAuth: false,
 };
 
 /*
